# cheatess-gui

./: .env  .env_template
.github/workflows/: backend.yml  frontend.yml
backend/: .env  Cargo.toml
backend/src/: main.rs
backend/src/interfaces/: mod.rs
backend/src/mocks/: func.rs  mod.rs  stockfish.rs
backend/src/route/: http.rs  mod.rs  ws.rs
backend/src/wrappers/: args.rs  enums.rs  func.rs  methods.rs  mod.rs  stockfish.rs
frontend/: .prettier.json  .prettierrc.json  eslint.config.js  eslint.config.ts  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.css  App.tsx
frontend/src/components/mainView/: ChessBoard.tsx  LastMovesSideBar.tsx
frontend/src/components/misc/: Navbar.tsx
frontend/src/components/settings/: SettingsForm.tsx  SettingsLivePreview.tsx
frontend/src/services/: api.ts
frontend/src/types/: RequestTypes.ts
frontend/src/views/: GameView.tsx  Settings.tsx
src/: main.rs
