[package]
name = "cheatess-backend"
version = "0.1.0"
edition = "2024"

repository = "https://github.com/Leghart/cheatess-gui"

[dependencies]
#cheatess-core = {  git = "https://github.com/Leghart/cheatess-core", branch = "develop" , features = ["serde"]}
cheatess-core = {  path = "/home/leghart/projects/cheatess", features = ["serde"]}
axum = { version = "0.8.4", features = ["ws"]}
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
headers = "0.4"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.6.1", features = ["fs", "cors"] }
serde = "1.0.219"
serde_json = "1.0.142"
http = "1.3.1"
dotenvy = "0.15.7"
log = "0.4.27"

[dev-dependencies]
rstest = "0.24.0"
clippy = "0.0.302"

[profile.release]
codegen-units = 1
debug = false
lto = "fat"
opt-level = 3
panic = "abort"
strip = true
